added uni alias

--- a/link/.ssh/config
+++ b/link/.ssh/config
@@ -16,3 +16,7 @@ Host htpc
 Host pyload
     Hostname 192.168.2.126
     User pyload
+
+Host zih
+    Hostname login.zih.tu-dresden.de
+    User s7090874
