added notebook ssh

--- a/link/.ssh/config
+++ b/link/.ssh/config
@@ -9,6 +9,10 @@ Host desktop
     Hostname 192.168.2.100
     User durox
 
+Host notebook
+    Hostname 192.168.2.104
+    User durox
+
 Host htpc
     Hostname 192.168.2.109
     User root
