wakatime plugin, IP update

--- a/link/.ssh/config
+++ b/link/.ssh/config
@@ -1,8 +1,8 @@
 Host server
     Hostname 162.243.111.80
 
-Host nas
-    Hostname 192.168.2.107
+Host freenas
+    Hostname 192.168.2.102
     User root
 
 Host desktop
@@ -14,12 +14,8 @@ Host notebook
     User durox
 
 Host htpc
-    Hostname 192.168.2.109
+    Hostname 192.168.2.101
     User root
-
-Host pyload
-    Hostname 192.168.2.126
-    User pyload
 
 Host zih
     Hostname login.zih.tu-dresden.de
